Beginning flexbox grid and styling -Created flexbox grid for round badges -Styled flex grid columns as round badges with preset colors

--- a/design-project.html
+++ b/design-project.html
@@ -32,9 +32,26 @@
 		</div>
 	</nav>
 </header>
-<h1 class="text-uppercase text-center">Visual Design & Web Development</h1>
-<h2 class="text-uppercase text-center">From park city, Utah</h2>
-
+<main class="container">
+	<h1 class="text-uppercase text-center">Visual Design & Web Development</h1>
+	<h2 class="text-uppercase text-center">From park city, Utah</h2>
+	<section class="container-fluid d-flex flex-wrap justify-content-evenly">
+		<div class="row justify-content-center">
+			<div class="col justify-content-center d-flex">
+				<div class="text-center border-round bg-red">Design</div>
+			</div>
+			<div class="col justify-content-center d-flex">
+				<div class="text-center border-round bg-orange ">Develop</div>
+			</div>
+			<div class="col justify-content-center d-flex">
+				<div class="text-center border-round bg-green ">Support</div>
+			</div>
+			<div class="col justify-content-center d-flex">
+				<div class="text-center border-round bg-aqua ">Host</div>
+			</div>
+		</div>
+	</section>
+</main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
