Finished first section -Revised gridbox container elements and added hr element -Added responsive styling for circle icons

--- a/design-project.html
+++ b/design-project.html
@@ -33,23 +33,28 @@
 	</nav>
 </header>
 <main class="container">
-	<h1 class="text-uppercase text-center">Visual Design & Web Development</h1>
-	<h2 class="text-uppercase text-center">From park city, Utah</h2>
-	<section class="container-fluid d-flex flex-wrap justify-content-evenly">
-		<div class="row justify-content-center">
-			<div class="col justify-content-center d-flex">
-				<div class="text-center border-round bg-red">Design</div>
-			</div>
-			<div class="col justify-content-center d-flex">
-				<div class="text-center border-round bg-orange ">Develop</div>
-			</div>
-			<div class="col justify-content-center d-flex">
-				<div class="text-center border-round bg-green ">Support</div>
-			</div>
-			<div class="col justify-content-center d-flex">
-				<div class="text-center border-round bg-aqua ">Host</div>
+	<h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
+	<h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
+	<section class="container-fluid mt-5">
+		<div class="w-100 justify-content-center row">
+			<div class="mw-icons p-0">
+				<div class="row justify-content-center">
+					<div class="col-6 col-md-3 justify-content-center d-flex">
+						<div class="border-round bg-red">Design</div>
+					</div>
+					<div class="col-6 col-md-3 justify-content-center d-flex">
+						<div class="border-round bg-orange ">Develop</div>
+					</div>
+					<div class="col-6 col-md-3 justify-content-center d-flex">
+						<div class="border-round bg-green ">Support</div>
+					</div>
+					<div class="col-6 col-md-3 justify-content-center d-flex">
+						<div class="border-round bg-aqua">Host</div>
+					</div>
+				</div>
 			</div>
 		</div>
+		<hr class="mt-5 d-none d-md-block">
 	</section>
 </main>
 
