Remove redundant inner div and margin
- applied m-0 to parent div for flex grid to remove an erroneous right margin
- removed inner div from each column that held text as this was redundant

--- a/design-project.html
+++ b/design-project.html
@@ -36,20 +36,20 @@
 	<h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
 	<h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
 	<section class="container-fluid mt-5">
-		<div class="w-100 justify-content-center row">
+		<div class="w-100 justify-content-center row m-0">
 			<div class="mw-icons p-0">
 				<div class="row justify-content-center">
-					<div class="col-6 col-md-3 justify-content-center d-flex">
-						<div class="border-round bg-red">Design</div>
+					<div class="border-round bg-red col-6 col-md-3 justify-content-center d-flex">
+						Design
 					</div>
-					<div class="col-6 col-md-3 justify-content-center d-flex">
-						<div class="border-round bg-orange ">Develop</div>
+					<div class="border-round bg-orange col-6 col-md-3 justify-content-center d-flex">
+						Develop
 					</div>
-					<div class="col-6 col-md-3 justify-content-center d-flex">
-						<div class="border-round bg-green ">Support</div>
+					<div class="border-round bg-green col-6 col-md-3 justify-content-center d-flex">
+						Support
 					</div>
-					<div class="col-6 col-md-3 justify-content-center d-flex">
-						<div class="border-round bg-aqua">Host</div>
+					<div class="border-round bg-aqua col-6 col-md-3 justify-content-center d-flex">
+						Host
 					</div>
 				</div>
 			</div>
