--- a/design-project.html
+++ b/design-project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,21 +36,81 @@
 	<h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
 	<h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
 	<section class="container-fluid mt-5 row justify-content-center mx-0">
-			<div class="row justify-content-center mw-icons p-0">
-				<div class="border-round bg-red col-6 col-md-3 justify-content-center d-flex">
-					Design
+		<div class="row justify-content-center mw-icons p-0">
+			<div class="border-round bg-red col-6 col-md-3 justify-content-center d-flex">
+				Design
+			</div>
+			<div class="border-round bg-orange col-6 col-md-3 justify-content-center d-flex">
+				Develop
+			</div>
+			<div class="border-round bg-green col-6 col-md-3 justify-content-center d-flex">
+				Support
+			</div>
+			<div class="border-round bg-aqua col-6 col-md-3 justify-content-center d-flex">
+				Host
+			</div>
+		</div>
+		<hr class="mt-5 d-none d-md-block">
+	</section>
+	<section class="container">
+		<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
+		<section class="container">
+			<div class="row justify-content-center">
+				<div class="card bg-transparent border-0 card-expand">
+					<div class="border border-5 img-border-gray card-img bg-img-apple"></div>
+					<div class="card-body p-0 d-flex justify-content-between">
+						<div class="card-text text-uppercase abel-font">featured project</div>
+						<div>
+							<span
+								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
+							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
+						</div>
+					</div>
 				</div>
-				<div class="border-round bg-orange col-6 col-md-3 justify-content-center d-flex">
-					Develop
+				<div class="card bg-transparent border-0 card-expand">
+					<div class="border border-5 img-border-gray card-img bg-img-mac"></div>
+					<div class="card-body p-0 d-flex justify-content-between">
+						<div class="card-text text-uppercase abel-font">featured project</div>
+						<div>
+							<span
+								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
+							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
+						</div>
+					</div>
 				</div>
-				<div class="border-round bg-green col-6 col-md-3 justify-content-center d-flex">
-					Support
+				<div class="card bg-transparent border-0 card-expand">
+					<div class="border border-5 img-border-gray card-img bg-img-man"></div>
+					<div class="card-body p-0 d-flex justify-content-between">
+						<div class="card-text text-uppercase abel-font">featured project</div>
+						<div>
+							<span
+								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
+							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
+						</div>
+					</div>
 				</div>
-				<div class="border-round bg-aqua col-6 col-md-3 justify-content-center d-flex">
-					Host
+				<div class="card bg-transparent border-0 card-expand">
+					<div class="border border-5 img-border-gray card-img bg-img-security"></div>
+					<div class="card-body p-0 d-flex justify-content-between">
+						<div class="card-text text-uppercase abel-font">featured project</div>
+						<div>
+							<span
+								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
+							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
+							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
+						</div>
+					</div>
 				</div>
 			</div>
-		<hr class="mt-5 d-none d-md-block">
+		</section>
+		<aside class="container"></aside>
 	</section>
 </main>
 
