Content and Styling -Added cards and in a section for Selected Work -Added Styling for cards in Selected Work section

--- a/design-project.html
+++ b/design-project.html
@@ -54,7 +54,7 @@
 	</section>
 	<section class="container">
 		<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
-		<section class="container">
+		<section class="container p-0">
 			<div class="row justify-content-center">
 				<div class="card bg-transparent border-0 card-expand">
 					<div class="border border-5 img-border-gray card-img bg-img-apple"></div>
