WIP -Working on section for selected work -Added aside for the last

--- a/design-project.html
+++ b/design-project.html
@@ -50,12 +50,12 @@
 				Host
 			</div>
 		</div>
-		<hr class="mt-5 d-none d-md-block">
+		<hr class="mt-5 mb-0 d-none d-md-block">
 	</section>
-	<section class="container">
-		<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
-		<section class="container p-0">
-			<div class="row justify-content-center">
+	<section class="container d-flex">
+		<section class="container p-0 justify-content-center d-flex flex-column w-auto">
+			<div class="row justify-content-center" id="card-main-content">
+			<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
 				<div class="card bg-transparent border-0 card-expand">
 					<div class="border border-5 img-border-gray card-img bg-img-apple"></div>
 					<div class="card-body p-0 d-flex justify-content-between">
@@ -110,7 +110,11 @@
 				</div>
 			</div>
 		</section>
-		<aside class="container"></aside>
+		<aside class="container bg-secondary d-none d-lg-block" id="main-aside-content">
+			<div class="row justify-content-center">
+				<div class="text-uppercase abel-font text-center my-4">The Last</div>
+			</div>
+		</aside>
 	</section>
 </main>
 
