Sizing for XL Screen -Fixed sizing for xl screen and added percentage width for images

--- a/design-project.html
+++ b/design-project.html
@@ -55,9 +55,9 @@
 	<section class="container d-flex">
 		<section class="container p-0 justify-content-center d-flex flex-column w-auto">
 			<div class="row justify-content-center" id="card-main-content">
-			<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
+				<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<div class="border border-5 img-border-gray card-img bg-img-apple"></div>
+					<img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<div class="border border-5 img-border-gray card-img bg-img-mac"></div>
+					<img src="img/macbook.jpg" class="border border-5 img-border-gray card-img">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<div class="border border-5 img-border-gray card-img bg-img-man"></div>
+					<img src="img/man.jpg" class="border border-5 img-border-gray card-img">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<div class="border border-5 img-border-gray card-img bg-img-security"></div>
+					<img src="img/security.jpg" class="border border-5 img-border-gray card-img">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
