Complete aside element
- added last-thumb and tweet classes for aside styling
- added content for aside which included 3 thumbnails with titles and 1 tweet
- added alt attribute to images in the main content

--- a/design-project.html
+++ b/design-project.html
@@ -57,7 +57,7 @@
 			<div class="row justify-content-center" id="card-main-content">
 				<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img">
+					<img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img" alt="apple ipad">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/macbook.jpg" class="border border-5 img-border-gray card-img">
+					<img src="img/macbook.jpg" class="border border-5 img-border-gray card-img" alt="macbook">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/man.jpg" class="border border-5 img-border-gray card-img">
+					<img src="img/man.jpg" class="border border-5 img-border-gray card-img" alt="man">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/security.jpg" class="border border-5 img-border-gray card-img">
+					<img src="img/security.jpg" class="border border-5 img-border-gray card-img" alt="security">
 					<div class="card-body p-0 d-flex justify-content-between">
 						<div class="card-text text-uppercase abel-font">featured project</div>
 						<div>
@@ -110,11 +110,31 @@
 				</div>
 			</div>
 		</section>
-		<aside class="container bg-secondary d-none d-lg-block" id="main-aside-content">
-			<div class="row justify-content-center">
-				<div class="text-uppercase abel-font text-center my-4">The Last</div>
-			</div>
-		</aside>
+        <aside class="container d-none d-lg-block" id="main-aside-content">
+            <div class="row justify-content-center">
+                <div class="text-uppercase abel-font text-center my-4">The Last</div>
+                <div class="d-flex flex-nowrap d-inline-block p-3">
+                    <img class="me-3 last-thumb" src="img/mobile-phone.jpg" alt="mobile phone">
+                    <h4 class="anton-font d-inline-block text-uppercase">the admin bar and absolute positioning</h4>
+                </div>
+                <div class="d-flex flex-nowrap d-inline-block p-3">
+                    <img class="me-3 last-thumb" src="img/head.jpg" alt="head">
+                    <h4 class="anton-font d-inline-block text-uppercase">nibbler awesome website testing</h4>
+                </div>
+                <div class="d-flex flex-nowrap d-inline-block p-3">
+                    <img class="me-3 last-thumb" src="img/ipad.jpg" alt="ipad">
+                    <h4 class="anton-font d-inline-block text-uppercase">how to get google to like you</h4>
+                </div>
+                <div class="mt-3">
+                    <p class="tweet my-1 card-text text-uppercase abel-font">
+                        last tweet
+                    </p>
+                    <p class="tweet">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias doloremque fugit
+                        ipsum iste minima vero? Accusantium amet architecto earum eius minima nulla porro quis
+                        tempore.</p>
+                </div>
+            </div>
+        </aside>
 	</section>
 </main>
 
