--- a/design-project.html
+++ b/design-project.html
@@ -1,115 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-	      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
-	<link href="css/custom.css" rel="stylesheet">
-	<title>Codeup Design</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <title>Codeup Design</title>
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-lg navbar-light p-0">
-		<div class="container-fluid p-0">
-			<a href="#" class="nav-link ms-0"><img src="img/logo.png" alt="logo" id="logo"></a>
-			<button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-			        data-bs-target="#mainNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="mainNavbar">
-				<ul class="nav-link navbar-nav w-100 align-items-center p-0">
-					<li class="nav-item navbar-brand"><a href="#" class="nav-link text-lowercase">Codeup Design</a></li>
-					<li class="nav-item"><a href="#" class="nav-link text-uppercase fw-light">Services</a></li>
-					<li class="nav-item"><a href="#" class="nav-link text-uppercase fw-light">Work</a></li>
-					<li class="nav-item"><a href="#" class="nav-link text-uppercase fw-light">Blog</a></li>
-					<li class="nav-item"><a href="#" class="nav-link text-uppercase fw-light">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+    <nav class="navbar navbar-expand-lg navbar-light p-0">
+        <div class="container-fluid p-0">
+            <a href="#" class="nav-link ms-0"><img src="img/logo.png" alt="logo" id="wh-logo"></a>
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#mainNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <ul class="nav-link navbar-nav w-100 align-items-center p-0">
+                    <li class="nav-item navbar-brand">
+                        <a href="#" class="nav-link text-lowercase">Codeup Design</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-uppercase fw-light">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-uppercase fw-light">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-uppercase fw-light">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-uppercase fw-light">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
 <main class="container">
-	<h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
-	<h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
-	<section class="container-fluid mt-5 row justify-content-center mx-0">
-		<div class="row justify-content-center mw-icons p-0">
-			<div class="border-round bg-red col-6 col-md-3 justify-content-center d-flex">
-				Design
-			</div>
-			<div class="border-round bg-orange col-6 col-md-3 justify-content-center d-flex">
-				Develop
-			</div>
-			<div class="border-round bg-green col-6 col-md-3 justify-content-center d-flex">
-				Support
-			</div>
-			<div class="border-round bg-aqua col-6 col-md-3 justify-content-center d-flex">
-				Host
-			</div>
-		</div>
-		<hr class="mt-5 mb-0 d-none d-md-block">
-	</section>
-	<section class="container d-flex">
-		<section class="container p-0 justify-content-center d-flex flex-column w-auto">
-			<div class="row justify-content-center" id="card-main-content">
-				<div class="text-uppercase abel-font text-center my-4">Selected Work</div>
-				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img" alt="apple ipad">
-					<div class="card-body p-0 d-flex justify-content-between">
-						<div class="card-text text-uppercase abel-font">featured project</div>
-						<div>
-							<span
-								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
-							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
-						</div>
-					</div>
-				</div>
-				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/macbook.jpg" class="border border-5 img-border-gray card-img" alt="macbook">
-					<div class="card-body p-0 d-flex justify-content-between">
-						<div class="card-text text-uppercase abel-font">featured project</div>
-						<div>
-							<span
-								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
-							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
-						</div>
-					</div>
-				</div>
-				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/man.jpg" class="border border-5 img-border-gray card-img" alt="man">
-					<div class="card-body p-0 d-flex justify-content-between">
-						<div class="card-text text-uppercase abel-font">featured project</div>
-						<div>
-							<span
-								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
-							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
-						</div>
-					</div>
-				</div>
-				<div class="card bg-transparent border-0 card-expand">
-					<img src="img/security.jpg" class="border border-5 img-border-gray card-img" alt="security">
-					<div class="card-body p-0 d-flex justify-content-between">
-						<div class="card-text text-uppercase abel-font">featured project</div>
-						<div>
-							<span
-								class="badge rounded-circle bg-red anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-orange anton-font m-1 text-black">D</span><span
-							class="badge rounded-circle bg-green anton-font m-1 text-black">S</span><span
-							class="badge rounded-circle bg-aqua anton-font m-1 text-black">H</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+    <h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
+    <h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
+    <section class="container-fluid mt-5 row justify-content-center mx-0">
+        <div class="row justify-content-center mw-pill-badge-container p-0">
+            <div class="border-round bg-fill anton-font col-6 col-md-3">
+                Design
+            </div>
+            <div class="border-round bg-fill anton-font col-6 col-md-3">
+                Develop
+            </div>
+            <div class="border-round bg-fill anton-font col-6 col-md-3">
+                Support
+            </div>
+            <div class="border-round bg-fill anton-font col-6 col-md-3">
+                Host
+            </div>
+        </div>
+        <hr class="mt-5 mb-0 d-none d-md-block">
+    </section>
+    <section class="container d-flex">
+        <section class="container p-0 justify-content-center w-auto">
+            <div class="row justify-content-center" id="card-main-content">
+                <div class="text-uppercase abel-font text-center my-4">Selected Work</div>
+                <div class="card bg-transparent border-0 card-expand">
+                    <img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img" alt="apple ipad">
+                    <div class="card-body p-0 d-flex justify-content-between">
+                        <div class="card-text text-uppercase abel-font">featured project</div>
+                        <div>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-transparent border-0 card-expand">
+                    <img src="img/macbook.jpg" class="border border-5 img-border-gray card-img" alt="macbook">
+                    <div class="card-body p-0 d-flex justify-content-between">
+                        <div class="card-text text-uppercase abel-font">featured project</div>
+                        <div>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-transparent border-0 card-expand">
+                    <img src="img/man.jpg" class="border border-5 img-border-gray card-img" alt="man">
+                    <div class="card-body p-0 d-flex justify-content-between">
+                        <div class="card-text text-uppercase abel-font">featured project</div>
+                        <div>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-transparent border-0 card-expand">
+                    <img src="img/security.jpg" class="border border-5 img-border-gray card-img" alt="security">
+                    <div class="card-body p-0 d-flex justify-content-between">
+                        <div class="card-text text-uppercase abel-font">featured project</div>
+                        <div>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <aside class="container d-none d-lg-block" id="main-aside-content">
             <div class="row justify-content-center">
                 <div class="text-uppercase abel-font text-center my-4">The Last</div>
@@ -135,7 +141,7 @@
                 </div>
             </div>
         </aside>
-	</section>
+    </section>
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
