Refactor class names
- revised class names to better reflect transformation they provide

--- a/design-project.html
+++ b/design-project.html
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light p-0">
         <div class="container-fluid p-0">
-            <a href="#" class="nav-link ms-0"><img src="img/logo.png" alt="logo" id="wh-logo"></a>
+            <a href="#" class="nav-link ms-0"><img src="img/logo.png" alt="logo" id="logo-wh"></a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                     data-bs-target="#mainNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -43,20 +43,20 @@
     </nav>
 </header>
 <main class="container">
-    <h1 class="text-uppercase text-center mt-5">Visual Design & Web Development</h1>
-    <h2 class="text-uppercase text-center mt-5">From park city, Utah</h2>
+    <h1 class="anton-font text-uppercase text-center mt-5">Visual Design & Web Development</h1>
+    <h2 class="anton-font text-uppercase text-center mt-5">From park city, Utah</h2>
     <section class="container-fluid mt-5 row justify-content-center mx-0">
-        <div class="row justify-content-center mw-pill-badge-container p-0">
-            <div class="border-round bg-fill anton-font col-6 col-md-3">
+        <div class="row justify-content-center mw-695 p-0">
+            <div class="bordered-pill-badge badge-fill anton-font col-6 col-md-3">
                 Design
             </div>
-            <div class="border-round bg-fill anton-font col-6 col-md-3">
+            <div class="bordered-pill-badge badge-fill anton-font col-6 col-md-3">
                 Develop
             </div>
-            <div class="border-round bg-fill anton-font col-6 col-md-3">
+            <div class="bordered-pill-badge badge-fill anton-font col-6 col-md-3">
                 Support
             </div>
-            <div class="border-round bg-fill anton-font col-6 col-md-3">
+            <div class="bordered-pill-badge badge-fill anton-font col-6 col-md-3">
                 Host
             </div>
         </div>
@@ -64,78 +64,78 @@
     </section>
     <section class="container d-flex">
         <section class="container p-0 justify-content-center w-auto">
-            <div class="row justify-content-center" id="card-main-content">
+            <div class="row justify-content-center" id="main-content">
                 <div class="text-uppercase abel-font text-center my-4">Selected Work</div>
-                <div class="card bg-transparent border-0 card-expand">
-                    <img src="img/apple-ipad.jpg" class="border border-5 img-border-gray card-img" alt="apple ipad">
+                <div class="card bg-transparent border-0 card-body-mw">
+                    <img src="img/apple-ipad.jpg" class="border border-5 gray-border card-img-wh" alt="apple ipad">
                     <div class="card-body p-0 d-flex justify-content-between">
                         <div class="card-text text-uppercase abel-font">featured project</div>
                         <div>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">H</span>
                         </div>
                     </div>
                 </div>
-                <div class="card bg-transparent border-0 card-expand">
-                    <img src="img/macbook.jpg" class="border border-5 img-border-gray card-img" alt="macbook">
+                <div class="card bg-transparent border-0 card-body-mw">
+                    <img src="img/macbook.jpg" class="border border-5 gray-border card-img-wh" alt="macbook">
                     <div class="card-body p-0 d-flex justify-content-between">
                         <div class="card-text text-uppercase abel-font">featured project</div>
                         <div>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">H</span>
                         </div>
                     </div>
                 </div>
-                <div class="card bg-transparent border-0 card-expand">
-                    <img src="img/man.jpg" class="border border-5 img-border-gray card-img" alt="man">
+                <div class="card bg-transparent border-0 card-body-mw">
+                    <img src="img/man.jpg" class="border border-5 gray-border card-img-wh" alt="man">
                     <div class="card-body p-0 d-flex justify-content-between">
                         <div class="card-text text-uppercase abel-font">featured project</div>
                         <div>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">H</span>
                         </div>
                     </div>
                 </div>
-                <div class="card bg-transparent border-0 card-expand">
-                    <img src="img/security.jpg" class="border border-5 img-border-gray card-img" alt="security">
+                <div class="card bg-transparent border-0 card-body-mw">
+                    <img src="img/security.jpg" class="border border-5 gray-border card-img-wh" alt="security">
                     <div class="card-body p-0 d-flex justify-content-between">
                         <div class="card-text text-uppercase abel-font">featured project</div>
                         <div>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">D</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">S</span>
-                            <span class="badge rounded-circle bg-fill anton-font m-1 text-black">H</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">D</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">S</span>
+                            <span class="badge rounded-circle badge-fill anton-font m-1 text-black">H</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <aside class="container d-none d-lg-block" id="main-aside-content">
+        <aside class="container d-none d-lg-block" id="main-aside">
             <div class="row justify-content-center">
                 <div class="text-uppercase abel-font text-center my-4">The Last</div>
                 <div class="d-flex flex-nowrap d-inline-block p-3">
-                    <img class="me-3 last-thumb" src="img/mobile-phone.jpg" alt="mobile phone">
+                    <img class="me-3 thumbnail-wh" src="img/mobile-phone.jpg" alt="mobile phone">
                     <h4 class="anton-font d-inline-block text-uppercase">the admin bar and absolute positioning</h4>
                 </div>
                 <div class="d-flex flex-nowrap d-inline-block p-3">
-                    <img class="me-3 last-thumb" src="img/head.jpg" alt="head">
+                    <img class="me-3 thumbnail-wh" src="img/head.jpg" alt="head">
                     <h4 class="anton-font d-inline-block text-uppercase">nibbler awesome website testing</h4>
                 </div>
                 <div class="d-flex flex-nowrap d-inline-block p-3">
-                    <img class="me-3 last-thumb" src="img/ipad.jpg" alt="ipad">
+                    <img class="me-3 thumbnail-wh" src="img/ipad.jpg" alt="ipad">
                     <h4 class="anton-font d-inline-block text-uppercase">how to get google to like you</h4>
                 </div>
                 <div class="mt-3">
-                    <p class="tweet my-1 card-text text-uppercase abel-font">
+                    <p class="font-small my-1 card-text text-uppercase abel-font">
                         last tweet
                     </p>
-                    <p class="tweet">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias doloremque fugit
+                    <p class="font-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias doloremque fugit
                         ipsum iste minima vero? Accusantium amet architecto earum eius minima nulla porro quis
                         tempore.</p>
                 </div>
